style.css
@import url('https://fonts.googleapis.com/css2?family=Jersey+10&display=swap');
*
{
    box-sizing: border-box;
    font-family: "Jersey 10";
    color: #EAEAEA;
}
body
{
    margin: 0;
    background-color:  #16161a ;
}
.header
{
    box-sizing: border-box;
    width: 100%;
    min-height: 10vh;
    display: flex;
    justify-content: center;
    align-items: center;
    border-bottom: white 1px solid;
}
.container
{
    box-sizing: border-box;
    min-height: 90vh;
    margin: auto;
    max-width: 60%;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.score
{
    display: flex;
    flex: 1;
    max-width: 100%;
    width: 100%;
    min-height: 40%;
    flex-wrap: wrap;
    overflow: hidden;
}
#bot_score , #player_score 
{
    width: 50%;
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: hidden;
}
.hands
{
    flex: 1;
    display: flex;
    width: 100%;
    height: 100%;
    flex-wrap: wrap;
    justify-content: center;
    align-content: center;
    gap: 20px;
    padding: 20px;
    

}
.card
{
    max-width: 35%;
    background: #242629;
    box-shadow: rgba(255, 255, 255, 0.1);
    transition: background-color 1s, transform 0.2s, box-shadow 0.5s, transform 0.5s;
}

.card:hover
{
   
    box-shadow: 0px 0px 5px 3px #2cb67d;
    background-color: black;
    transform: scale(1.1);
}
.card:active
{
    box-shadow: 0px 0px 5px 3px #2cb67d;
    background-color: black;
    transform: scale(0.9);
}

.card img
{
    width: 100%;
    height: 100%;
    border-radius: 3px;
}
.number 
{   margin: 0;
    padding: 0PX;
    font-size: 1000%;
}

#message
{
    font-size:xx-large;
}

#popup
{
    visibility: visible;
    display: flex;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    background-color: rgba(0, 0, 34, 0.5);
    /* background-color: #000022; */
    justify-content: center;
    align-items: center;
}
#win
{
    box-shadow: 0px 0px 50px 0px black;
    max-width: 550px;
    width: 100%;
    min-height: 250px;
    border-radius: 10px;
    text-wrap: wrap;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    padding: 10px;
    font-size: 50px;
    background-color: #242629;
}
#win p
{
    color: #94a1b2;
    margin-top: auto;
    margin: auto;
    padding: 0;
}

#reset
{
    width: 150px;
    height: 50px;
    background-color:#7f5af0;
    color: #fffffe;
    font-size: 20px;
    align-self: center;
    margin-top: auto;
    border: none;
    box-shadow: 0px 0px 5px 0px black;
    transition: background-color 1s, transform 0.2s, box-shadow 0.5s;
}

#reset:hover
{
   
    box-shadow: 0px 0px 5px 3px #2cb67d;
    background-color: black;
    color: #2cb67d;
}

#reset:active
{
    box-shadow: 0px 0px 5px 3px #2cb67d;
    background-color: black;
    transform: scale(0.9);
}

